# luckfox_pico_rknn_example

./: CMakeLists.txt  README.md  README_CN.md  build.sh
example/luckfox_pico_retinaface_facenet/include/: retinaface_facenet.h
example/luckfox_pico_retinaface_facenet/src/: facenet.cc  main.cc  retinaface.cc
example/luckfox_pico_retinaface_facenet_spidev/src/: facenet.cc  main.cc  retinaface.cc
example/luckfox_pico_yolov5/include/: postprocess.h
example/luckfox_pico_yolov5/src/: main.cc  postprocess.cc
install/luckfox_pico_retinaface_facenet_demo/: luckfox_pico_retinaface_facenet
install/luckfox_pico_retinaface_facenet_spidev_plus_demo/: luckfox_pico_retinaface_facenet_spidev
install/luckfox_pico_retinaface_facenet_spidev_pro_max_demo/: luckfox_pico_retinaface_facenet_spidev
install/luckfox_pico_yolov5_demo/: luckfox_pico_yolov5
lib/cmake/opencv4/: OpenCVConfig.cmake
scripts/luckfox_onnx_to_rknn/: README.md  README_CN.md
